# CS-II-ISP-Automatic-Differentiation

./: README.md  isp.py  pyproject.toml  resolve_deps.sh  shuntingyardalg.py  test.py
.github/workflows/: build_pkg.yml
CalCoolUs/: preprocess.py
CalCoolUs/ops/: add.py  op.py  op_types.py  sub.py
